Part 2/confs/deployments.yaml
# -- app-one -- #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  labels:
    app: app
spec:
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: nginx:latest
        resources:
          limits:
            memory: "500Mi"
            cpu: "400m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
        - name: conf-template
          mountPath: /etc/nginx/templates
      volumes:
      - name: html
        configMap:
          name: app-one
      - name: conf-template
        configMap:
          name: nginx-template
---
# -- app-two -- #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
  labels:
    app: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: app-two
        image: nginx:latest
        resources:
          limits:
            memory: "500Mi"
            cpu: "400m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
        - name: conf-template
          mountPath: /etc/nginx/templates
      volumes:
      - name: html
        configMap:
          name: app-two
      - name: conf-template
        configMap:
          name: nginx-template
---
# -- app-three -- #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  labels:
    app: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: app-three
        image: nginx:latest
        resources:
          limits:
            memory: "500Mi"
            cpu: "400m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
        - name: conf-template
          mountPath: /etc/nginx/templates
      volumes:
      - name: html
        configMap:
          name: app-three
      - name: conf-template
        configMap:
          name: nginx-template
